# runner

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/: settings.json
.claude/skills/: bug  feature
.github/workflows/: ci.yaml  release.yml
cli/: Cargo.toml
cli/src/: help.rs  main.rs  mcp.rs  mcp_main.rs  msg.rs  roster.rs  signal.rs
cli/tests/: roundtrip.rs
crates/runner-app/: Cargo.toml
design/: README.md  chat-attention-indicators.pen  runner-crew-list-search.pen  runner-mission.pen  runner-mvp-design.pen  runner-setting.pen  runners-design.pen
docs/: dev-log.md
docs/arch/: arch.md  v0-arch.md  v0-prd.md
docs/features/: 01-archived-tab.md  02-collapsable-sidebar.md  03-mcp-server.md  05-runner-skills.md  06-runner-working-dir-browse.md  07-zoom-and-font-size.md  10-mission-session-persistence.md  11-runner-avatar.md  12-multi-window.md  13-pty-silence-idle-detection.md  15-light-theme.md  16-sidebar-mission-detail.md  18-app-logging-and-crash-reporting.md  19-mission-split-view.md  21-import-native-sessions.md  21-resume-cwd-sessions.md  24-cronjobs.md  25-direct-chat-runtime-picker.md  28-mission-mcp-tools.md  29-runner-crew-list-pagination-search.md  30-opencode-runtime.md  34-direct-chat-split-view.md  35-sidebar-drag-group-tabs.md  37-agent-runtime-executable-settings.md  38-sidebar-folders-for-tabs.md  39-chat-working-unread-indicators.md  40-projects.md  42-headless-terminal-model.md  43-sidebar-pinned-section.md  44-sidebar-node-tree.md  45-auto-resume-on-launch.md  46-sidebar-project-reorder.md  47-deferred-mission-nudge-delivery.md  48-mission-inbox-reconciliation-tick.md  49-periodic-update-checks.md  50-inbox-delivery-blocked-indicator.md  51-read-mostly-mission-feed.md  README.md
docs/impls/: 0002-crew-slots.md  0003-direct-chats.md  0004-tmux-session-runtime.md  0005-first-prompt-readback.md  0007-spawn-time-prompt-delivery.md  0009-terminal-alt-screen-reattach.md  0010-terminal-replay-cols-alignment.md  0011-pty-host-terminal-runtime.md  0013-direct-chat-runtime-picker.md  0013-mcp-server.md  0014-direct-chat-response-status.md  0017-codex-session-key-capture.md  0019-runner-landing-page.md  0020-direct-chat-split-view.md  0020-mission-split-view.md  0022-new-chat-pane-fill-window-ownership.md  0023-sidebar-tab-accordion.md  0025-settings-page-redesign.md  0027-window-position-restore.md  crew-slots.md  direct-chats.md  v0-mvp-c5-5-shared-runners.md  v0-mvp.md
docs/journals/: v0-mvp.md
docs/logs/: 2026-04-26-progress.md
docs/product/: vision.md
docs/tests/: v0-mvp-tests.md  windows-wsl-port-smoke.md
examples/dev-crew/: architect.md  goal.md  impl.md
examples/docs-crew/: architect.md  editor.md  goal.md  writer.md
examples/peer-coding/: coder.md  goal.md  reviewer.md
examples/tic-tac-toe/: goal.md  player.md  referee.md
examples/tomb-raid/: dm.md  goal.md  player.md
games/werewolf/: goal.md  god.md  player.md
scripts/: stage-runner-cli.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app.manifest
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_agent_session_key.sql  0002_default_crew.sql  0003_persona_only_seeds.sql  0003_session_archive.sql  0003_session_runtime.sql  0004_session_title.sql  0005_session_pin.sql  0006_drop_crews_signal_types.sql  0006_slots.sql  0007_mission_pin.sql  0008_runner_execution_target.sql  0008_runner_model_effort.sql  0011_projects.sql  0013_slot_runtime_override.sql  0014_nodes.sql  0015_retire_folders.sql
src-tauri/src/: cli_install.rs  db.rs  error.rs  lib.rs  model.rs  panic_hook.rs  shell_path.rs  window_state.rs  windows.rs
src-tauri/src/commands/: app.rs  crew.rs  crew_runner.rs  folder.rs  mcp.rs  mission.rs  mod.rs  node.rs  project.rs  runner.rs  runtime.rs  session.rs  slot.rs  tab.rs  window.rs
src-tauri/src/event_bus/: mod.rs
src-tauri/src/mcp/: mod.rs  server.rs  state.rs
src-tauri/src/mcp/tools/: crew.rs  mission.rs  mod.rs  project.rs  runner.rs  session.rs  slot.rs
src-tauri/src/repo/: crew.rs  folder.rs  mission.rs  mod.rs  node.rs  project.rs  serde.rs  session.rs  slot.rs  tab.rs
src-tauri/src/router/: handlers.rs  mod.rs  prompt.rs  runtime.rs  tests.rs
src-tauri/src/session/: codex_capture.rs  launch.rs  manager.rs  mod.rs  pty_runtime.rs  runtime.rs  tmux.rs  tmux_runtime.rs
src-tauri/src/session/manager/: lifecycle.rs  mod.rs  output.rs  spawn.rs  tests.rs
src-tauri/src/session/wsl/: install.rs  job.rs  mod.rs  path.rs
src/components/: AddSlotModal.tsx  AppShell.tsx  AskHumanCard.tsx  ChatPaneGroup.tsx  ChatTabGroup.test.ts  ChatTabGroup.tsx  CommandPalette.tsx  CreateRunnerModal.tsx  DuplicateSubjectOverlay.tsx  EmptyStateCard.tsx  EventFeed.tsx  InboxBlockedPill.test.tsx  InboxBlockedPill.tsx  LayoutPicker.tsx  MessageBody.tsx  MissionInput.tsx  MissionMetaPanel.tsx  MissionResetConfirm.tsx  PanelToggleGlyph.tsx  PersistentSurfaces.tsx  RunnerEditDrawer.tsx  RunnerTerminal.tsx  RunnersRail.tsx  SessionEndedOverlay.tsx  SettingsModal.tsx  Sidebar.test.ts  Sidebar.tsx  SidebarRename.test.ts  SidebarTabRow.tsx  StartChatModal.tsx  StartMissionModal.tsx  StartProjectModal.test.tsx  UpdatePromptCard.tsx  UpdateToast.tsx
src/contexts/: ToastContext.tsx  UpdateContext.test.tsx  UpdateContext.tsx
src/hooks/: useCurrentWindowFullscreen.test.tsx  useCurrentWindowFullscreen.ts  useListControls.ts  useResizableWidth.ts  useUpdateChecker.ts
src/lib/: api.ts  appZoom.test.ts  appZoom.ts  archivingState.ts  chatAttention.test.ts  chatAttention.ts  chatTabs.test.ts  chatTabs.ts  deliveryBlocked.test.tsx  deliveryBlocked.ts  directChatStatus.test.ts  directChatStatus.ts  groupPinning.test.ts  groupPinning.ts  i18n.tsx  i18n.zh.ts  keymap.test.ts  keymap.ts  listControls.test.ts  listControls.ts  missionLastTerminal.ts  missionTabNavigation.test.ts  missionTabNavigation.ts  paneLayout.test.ts  paneLayout.ts  platform.ts  projectScope.ts  sessionLifecycle.test.ts  sessionLifecycle.ts  settings.ts  (+15 more)
(+157 files in other folders)
