[package]
name = "runner-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Bundled `runner` CLI agents use to append signals/messages to a mission's NDJSON event log."
autobins = false

# Source-side agent binary. `cli_install` renames this to `runner` when
# copying into `$APPDATA/runner/bin/` so spawned agents get the compact
# mission-communication command on PATH without colliding with the Tauri
# app crate's `runner` binary in the shared workspace `target/` dir.
[[bin]]
name = "runner-agent-cli"
path = "src/main.rs"

# Source-side MCP proxy binary. AI clients launch the installed
# `$APPDATA/runner/bin/runner-mcp` directly; mission agents should not
# see MCP as a `runner` subcommand.
[[bin]]
name = "runner-mcp"
path = "src/mcp_main.rs"

[dependencies]
runner-core = { path = "../crates/runner-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
tokio = { version = "1", features = ["macros", "net", "rt", "time", "io-util", "io-std"] }
rmcp = { version = "1.7", features = ["server", "client"] }

[dev-dependencies]
tempfile = "3"
