[package]
name = "runner"
version = "0.2.10"
description = "An editor for teams of local coding agents (Claude Code, Codex, and friends)"
edition.workspace = true
authors.workspace = true

[lib]
name = "runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# `custom-protocol` makes the webview load the embedded frontendDist
# (production) instead of `devUrl`. Tauri keys dev-vs-prod on this
# feature (tauri build.rs: `dev = !custom-protocol`), NOT on the cargo
# release flag — the Tauri CLI's `tauri build` enables it. We build the
# exe standalone without the CLI, and the Windows↔WSL localhost
# forwarding a dev server would need is unavailable here, so we default
# it ON: every `cargo build` embeds the frontend. Disable with
# --no-default-features only when wiring up a live dev server.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
runner-core = { path = "../crates/runner-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
# Regular dep (not dev-only) because the sidecar writer needs
# NamedTempFile::persist for a Windows-safe atomic replace.
tempfile = "3"
# Filesystem watcher for the per-mission event-log tail (C7). The
# `macos_fsevent` backend is the default on macOS; on Linux it falls back to
# inotify, on Windows to ReadDirectoryChangesW.
notify = "6"
# MCP server (impl 0013): Unix socket listener for external clients.
# The `runner-mcp` sidecar bridges stdio ↔ this socket.
rmcp = { version = "1.7", features = ["server"] }
schemars = "1"
tokio = { version = "1", features = ["net", "rt", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
# Codex MCP config lives in ~/.codex/config.toml; toml_edit preserves
# user-authored comments + formatting on round-trip writes.
toml_edit = "0.25"
# PTY backend for session::pty_runtime (impl 0011). All-targets:
# portable-pty's ConPTY backend supports Windows, which the Windows+WSL
# port (session::wsl) relies on to spawn `wsl.exe` into a pseudoconsole.
portable-pty = "0.9"

# Unix-only deps:
#  - libc: FIFO mkfifo + poll() inside the retired session::tmux_runtime.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-only deps:
#  - winapi: Job Object so spawned `wsl.exe` agent relays die with the
#    app even on a crash / force-kill (session::wsl::job). Already in the
#    tree via portable-pty, so no new transitive cost.
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "jobapi2",
    "processthreadsapi",
    "handleapi",
    "winnt",
    "minwindef",
] }

[dev-dependencies]
# Used by issue #124's forwarder-contention regression test to hold the
# event-log flock from a second fd; matches the version `runner-core`
# pulls in transitively so the trait impl resolves identically.
fs2 = "0.4"
