[package]
name = "runner"
version = "0.3.16"
description = "An editor for teams of local coding agents (Claude Code, Codex, and friends)"
edition.workspace = true
authors.workspace = true

[lib]
name = "runner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The UI-agnostic app core (impl 0031 Phase 2): command bodies, session
# manager, event bus, router, MCP server. This crate is the thin Tauri
# frontend over it.
runner-app = { path = "../crates/runner-app" }
runner-core = { path = "../crates/runner-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
# window_state's atomic geometry write (NamedTempFile::persist).
tempfile = "3"
# Only the broadcast receiver for the webview event forwarder; everything
# else tokio-shaped lives in runner-app.
tokio = { version = "1", features = ["sync"] }
